# dsa-20241

./: CMakeLists.txt  CMakePresets.json  README.md  Test.txt  data.txt  dijktra.cpp  test.txt
inc/: algorithms.h  application.h  color.h  graph.h  ultis.h
src/: algorithms.cpp  application.cpp  graph.cpp  main.cpp  ultis.cpp
